# stellarchatpay

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
contracts/: README.md
contracts/escrow/: .gitignore  Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/payment-log/: Cargo.toml
contracts/payment-log/src/: lib.rs  test.rs
scripts/: deploy-contract.mjs  deploy-escrow.mjs
src/: App.tsx  index.css
src/components/: BotAvatar.tsx  ChatBubble.tsx  ChatMessageList.tsx  ChatWindow.tsx  Logo.tsx  QuickActions.tsx  SuggestionLinks.tsx  ThemeToggle.tsx  WalletHeader.tsx
src/config/: assets.ts  contract.ts
src/hooks/: usePaymentEvents.ts  useTheme.ts  useWallet.ts
src/lib/: chat.test.ts  chat.ts  contract.ts  errors.ts  escrow.ts  stellar.ts  wallet-kit.ts
